Spacing issues fixed

--- a/style.css
+++ b/style.css
@@ -319,13 +319,14 @@ button:hover {
   }
 
   #hero {
-    height: 900px;
+    height: 800px;
     padding: 0px 10px;
-    flex-wrap: wrap-reverse;
+    flex-direction: column-reverse;
     justify-content: center;
   }
 
   #heroText {
+    margin-top: 50px;
     text-align: center;
     align-items: center;
     color: #FFFFFF;
@@ -345,9 +346,14 @@ button:hover {
     min-height: 300px;
   }
 
+  .triangle {
+    margin-bottom: 10px;
+  }
+  
   .section {
     align-items: center;
     padding: 0px 10px;
+    margin-top: 20px;
     width: 95%;
   }
 
